tests/baselines/reference/protoAssignment(strict=true).errors.txt
protoAssignment.ts(1,26): error TS2304: Cannot find name 'Comparable'.
protoAssignment.ts(3,5): error TS7010: 'compareTo', which lacks return-type annotation, implicitly has an 'any' return type.


==== protoAssignment.ts (2 errors) ====
    interface Number extends Comparable<number> {
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Comparable'.
    
        compareTo(other: number);
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'compareTo', which lacks return-type annotation, implicitly has an 'any' return type.
    
    }
    
    Number.prototype.compareTo = function (other: number) {
    
       return this.valueOf() == other;
    
    }
    
     
    